fix table alignment

--- a/src/app/main/defaultUser/cart/cart.component.scss
+++ b/src/app/main/defaultUser/cart/cart.component.scss
@@ -23,7 +23,6 @@
             .mdc-data-table__row {
                 &:first-child {
                     .mat-mdc-cell {
-                        height: 105px;
                         padding-top: 55px;
                     }
                 }
